updated the md lab book for March

--- a/lab-book/2020-03-march.md
+++ b/lab-book/2020-03-march.md
@@ -212,12 +212,13 @@ I took a sick day.
 
 ## 31 March 2020 (Tuesday)
 
-Commits: 34
+Commits: 38
 
 #### Worked on
 
   - updating path on Rmd and commit to the repo in Dan’s team
     repositories
+  - working on plotting disopred results
 
 #### Weekly meeting
 
