--- a/lab-book/2020-04-april.md
+++ b/lab-book/2020-04-april.md
@@ -5,7 +5,7 @@
 
 ## 01 April 2020 (Wednesday)
 
-Commits: 20
+Commits: 22
 
 #### Worked on
 
@@ -24,3 +24,12 @@ Commits: 20
       - get accuracy given prediction results for multiple models in one
         dataframe:
         [`get_accuracy.R`](https://github.com/TeamMacLean/ruth-effectors-prediction/blob/master/scripts/r-scripts/r-functions/get_accuracy.R)
+
+## 02 April 2020 (Thursday)
+
+Commits: 1
+
+#### Worked on
+
+  - evaluating my data on effectorP 1.0 and 2.0
+  - analysing the results on each dataset
