--- a/lab-book/2020-04-april.md
+++ b/lab-book/2020-04-april.md
@@ -27,9 +27,27 @@ Commits: 22
 
 ## 02 April 2020 (Thursday)
 
-Commits: 1
+Commits: 2
 
 #### Worked on
 
   - evaluating my data on effectorP 1.0 and 2.0
   - analysing the results on each dataset
+
+## 03 April 2020 (Friday)
+
+Commits: 1
+
+#### Worked on
+
+  - tried to install some other existing effector prediction
+tools:
+
+|                                    Tools                                     | Effector Pathogen |      Cut-off       |                 Note                  |
+| :--------------------------------------------------------------------------: | :---------------: | :----------------: | :-----------------------------------: |
+|                   [EffectorP](http://effectorp.csiro.au./)                   |       fungi       |                    |                 done                  |
+| [DeepT3](https://github.com/lje00006/DeepT3/tree/master/DeepT3/DeepT3-Keras) |     bacteria      | probability = 0.5  |                 done                  |
+|     [EffectiveT3](https://effectors.csb.univie.ac.at/method/effectivet3)     |     bacteria      | probability = 0.95 |                 done                  |
+|         [T3SS](https://omictools.com/t3ss-effector-prediction-tool)          |     bacteria      |         \-         |           can not be found            |
+|                     [Sieve](http://www.sysbep.org/sieve)                     |     bacteria      |         \-         |           can not be found            |
+|     [SecretEPDB](http://secretepdb.erc.monash.edu/defaultAction.action)      |     bacteria      |         \-         | can not be accessed (just got hacked) |
