added list of effector prediction tools

--- a/lab-book/2020-04-april.md
+++ b/lab-book/2020-04-april.md
@@ -43,11 +43,13 @@ Commits: 1
   - tried to install some other existing effector prediction
 tools:
 
-|                                    Tools                                     | Effector Pathogen |      Cut-off       |                 Note                  |
-| :--------------------------------------------------------------------------: | :---------------: | :----------------: | :-----------------------------------: |
-|                   [EffectorP](http://effectorp.csiro.au./)                   |       fungi       |                    |                 done                  |
-| [DeepT3](https://github.com/lje00006/DeepT3/tree/master/DeepT3/DeepT3-Keras) |     bacteria      | probability = 0.5  |                 done                  |
-|     [EffectiveT3](https://effectors.csb.univie.ac.at/method/effectivet3)     |     bacteria      | probability = 0.95 |                 done                  |
-|         [T3SS](https://omictools.com/t3ss-effector-prediction-tool)          |     bacteria      |         \-         |           can not be found            |
-|                     [Sieve](http://www.sysbep.org/sieve)                     |     bacteria      |         \-         |           can not be found            |
-|     [SecretEPDB](http://secretepdb.erc.monash.edu/defaultAction.action)      |     bacteria      |         \-         | can not be accessed (just got hacked) |
+|                                    Tools                                     | Effector Pathogen |                          Cut-off                          |                 Note                  |
+| :--------------------------------------------------------------------------: | :---------------: | :-------------------------------------------------------: | :-----------------------------------: |
+|                   [EffectorP](http://effectorp.csiro.au./)                   |       fungi       | “effector” if average prob (“effector” \> “non-effector”) |                 done                  |
+| [DeepT3](https://github.com/lje00006/DeepT3/tree/master/DeepT3/DeepT3-Keras) |     bacteria      |                     probability = 0.5                     |                 done                  |
+|     [EffectiveT3](https://effectors.csb.univie.ac.at/method/effectivet3)     |     bacteria      |                    probability = 0.95                     |                 done                  |
+|         [T3SS](https://omictools.com/t3ss-effector-prediction-tool)          |     bacteria      |                            \-                             |           can not be found            |
+|                     [Sieve](http://www.sysbep.org/sieve)                     |     bacteria      |                            \-                             |           can not be found            |
+|     [SecretEPDB](http://secretepdb.erc.monash.edu/defaultAction.action)      |     bacteria      |                            \-                             | can not be accessed (just got hacked) |
+|                   [OPT4e](https://github.com/zhesna/OPT4e)                   |     bacteria      |                                                           |                                       |
+|          [PyPredT6](http://projectphd.droppages.com/PyPredT6.html)           |     bacteria      |                                                           |                                       |
