--- a/lab-book/2020-04-april.md
+++ b/lab-book/2020-04-april.md
@@ -5,7 +5,7 @@
 
 ## 01 April 2020 (Wednesday)
 
-Commits: 22
+Commits: 23
 
 #### Worked on
 
@@ -51,5 +51,107 @@ tools:
 |         [T3SS](https://omictools.com/t3ss-effector-prediction-tool)          |     bacteria      |                            \-                             |           can not be found            |
 |                     [Sieve](http://www.sysbep.org/sieve)                     |     bacteria      |                            \-                             |           can not be found            |
 |     [SecretEPDB](http://secretepdb.erc.monash.edu/defaultAction.action)      |     bacteria      |                            \-                             | can not be accessed (just got hacked) |
-|                   [OPT4e](https://github.com/zhesna/OPT4e)                   |     bacteria      |                                                           |                                       |
-|          [PyPredT6](http://projectphd.droppages.com/PyPredT6.html)           |     bacteria      |                                                           |                                       |
+
+Note that the last two is also bacteria, I will focus more on presenting
+the one I have.
+
+## 06 April 2020 (Monday)
+
+Commits: 2
+
+#### Weekly catch up meeting:
+
+  - making better comparison between prediction results using existing
+    tools and tool I developed using some metrics like ROC, sensitivity,
+    specificity ==\> contact Joe Win for the oomycete predictor
+  - better waiting from the results from disopred than trying to new
+    tool, that may take more time (and this additional part is not
+    urgent / priority)
+  - try to make function that can ensemble both two results (from venn
+    diagram) for fungi ensemble
+  - start to make package in R for the prediction tool
+
+## 07–08 April 2020
+
+Commits: 0
+
+#### Worked on:
+
+  - evaluate the oomycete data using the oomycete effector predictor
+    `effectR`
+  - read the R package procedure
+
+## 09–13 April 2020– Easter Break
+
+## 14–17 April 2020
+
+Commits: 0
+
+#### Worked on:
+
+  - creating the package for effector prediction
+    <https://github.com/ruthkr/effectorpred>
+  - compare the previous work and our model with our model (calculate
+    several metrics), also confusion matrices
+  - updating the report
+
+## 20 April 2020 (Monday)
+
+Commits: 13
+
+#### Weekly catch up meeting:
+
+  - think about a package name that represent the goal, the methods,
+    also the pathogen
+  - since the prediction takes forever, then try to do benchmark to
+    identify the problems, suspected problem sources:
+      - the encoding part
+      - the predict function used, maybe keras::predict\_proba() or
+        keras::predict\_classes() instead of stats::predict
+  - not necessarily put one function in different single files
+  - think about what user may need and do
+  - make user manual documentation
+
+## 20–25 April 2020
+
+Commits: 13
+
+#### Worked on:
+
+  - did several benchmarkings on each functions and calculated the
+    timing of each function run
+  - name changed from `effectorpred` to `deeffpred`
+  - comparing the base package with the stringr, also function from the
+    base package with keras function
+  - completed the package
+
+## 27 April 2020 (Monday)
+
+Commits: 3
+
+#### Weekly catch up meeting:
+
+  - Dan suggested name `deepredeff` which is more pronouncable
+  - tried to do profiling for all functions since the problem is that
+    the combination of break down calculation time for each function
+    does not match with the whole function running time. The whole
+    function is very slow.
+  - report need to be done
+  - make the load data function parallel to minimize the running time
+  - maybe defining the function init that initializes all model and
+    paramaters
+
+## 28–30 April 2020
+
+Commits: 0
+
+#### Worked on:
+
+  - completing all ensembles
+  - added the intefer encoding
+  - completing reports
+  - testing and benchmarking the R-package
+      - testing on how actually purr effect on the computation time
+      - testing between array and list input
+  - uninstall and install both R and python, updated, since found out
+    that the main problem
