--- a/lab-book/2020-05-may.md
+++ b/lab-book/2020-05-may.md
@@ -33,7 +33,7 @@ Commits: 0
 
 ## 05 May 2020 (Tuesday)
 
-Commits: 10
+Commits: 12
 
 #### Worked on
 
@@ -43,83 +43,97 @@ Commits: 10
 
 ## 06 May 2020 (Wednesday)
 
-Commits: 3
+Commits: 18
 
 #### Worked on
+
+  - adding the new input class possibility: “AAString” and “AAStringset”
+  - corrected the API name
 
 ## 07 May 2020 (Thursday)
 
-Commits: 0
+Commits: 8
 
 #### Worked on
 
+  - created the pkgdown set for documentating the package
+    <https://github.com/ruthkr/deepredeff>
+  - fixing the bug on the main function
+  - parallel the load\_model()
+
 ## 08 May 2020 (Friday) – Bank Holiday
+
+Early May Bank Holiday
 
 -----
 
 ## 11 May 2020 (Monday)
 
-Commits: 0
+Commits: 5
 
 #### Weekly catchup meeting
+
+  - focus first on how I will design the API of the package
+  - try to find Bioconductor package that can turn any input to AAString
+    to dataframe ( no need to use additional function I got)
+  - small details to fix: license, package version, better documentation
+  - test scripts
 
 #### Worked on
 
 ## 12 May 2020 (Tuesday)
 
-Commits: 0
+Commits: 9
 
 #### Worked on
 
-## 13 May 2020 (Wednesday)
+  - manuscripts
+  - designed the API for the package
 
-Commits: 0
+## 13–15 May 2020
 
-#### Worked on
-
-## 14 May 2020 (Thursday)
-
-Commits: 0
+Commits: 9
 
 #### Worked on
 
-## 15 May 2020 (Friday)
-
-Commits: 0
-
-#### Worked on
+  - package
+    
+      - trying to re-make the main function into S3 Objects for
+        different classes
+      - create more structured tbl\_deepredeff object
 
 -----
 
 ## 18 May 2020 (Monday)
 
-Commits: 0
+Commits: 5
 
 #### Weekly catchup meeting
 
-#### Worked on
+  - make simple tests, focus on functions that will get called by the
+    users
+  - create Rmd that will be vignette: imagine you being a user so you
+    can imagine what to expect
+  - no need to do autoplot if I can just use plot(): start with simple
+    ggplot
 
-## 19 May 2020 (Tuesday)
+## 19–22 May 2020
 
-Commits: 0
-
-#### Worked on
-
-## 20 May 2020 (Wednesday)
-
-Commits: 0
-
-#### Worked on
-
-## 21 May 2020 (Thursday)
-
-Commits: 0
+Commits: 27
 
 #### Worked on
 
-## 22 May 2020 (Friday)
-
-Commits: 0
+  - add more sample data in Deepredeff, previously it was only two
+    sequences for each pathogen
+  - solve testing problem for predict effector
+  - complete readme
+  - standardize the output df: name for input FASTA and df are
+    trunctaed, but not if the input are AAString and AAStringset
+  - fix the autoplot
+  - continue the visualise convnet
+  - license
+  - making vignette
+  - complete some of the manuscript
 
 #### Worked on
 
@@ -127,22 +141,15 @@ Commits: 0
 
 ## 25 May 2020 (Monday) – Bank Holiday
 
-## 26 May 2020 (Tuesday)
+There is no weekly catch up meeting.
 
-Commits: 0
+## 26 May 2020 (Tuesday) – Privilege Day
 
-#### Worked on
+## 27–29 May 2020
 
-## 27 May 2020 (Wednesday)
-
-Commits: 0
+Commits: 5
 
 #### Worked on
 
-## 28 May 2020 (Thursday)
-
-Commits: 0
-
-#### Worked on
-
-## 29 May 2020 (Friday)
+  - completed the Grad-CAM part in the manuscript
+  - make plot generated from chunks
